--- a/assets/css/pages/_nice.css
+++ b/assets/css/pages/_nice.css
@@ -232,6 +232,7 @@
   overflow: auto;
   text-align: center;
   border: 0;
+  border-radius: 0;
 }
 
 .nice-thing:active {
